--- a/linkbook/authentication/templates/authentication/login.html
+++ b/linkbook/authentication/templates/authentication/login.html
@@ -2,13 +2,11 @@
 {% load staticfiles %}
 {% load i18n %}
 
-{% block head %}
-  <link href="{% static 'css/cover.css' %}" rel="stylesheet">
-{% endblock head %}
+{% block title %}LOGIN{% endblock %}
+
 
 {% block body %}
   <div class="login">
-    <h1 class="logo">LinkBook</h1>
     {% if form.non_field_errors %}
       {% for error in form.non_field_errors %}
         <div class="alert alert-danger alert-dismissable">
@@ -37,7 +35,6 @@
         </div>
         <div class="form-group">
           <button type="submit" class="btn btn-default">{% trans 'Log in' %}</button>
-          <a href="{% url 'signup' %}" class="btn btn-link">{% trans 'Sign up for Bootcamp' %}</a>
         </div>
       </form>
     </div>
