--- a/linkbook/authentication/templates/authentication/login.html
+++ b/linkbook/authentication/templates/authentication/login.html
@@ -6,37 +6,49 @@
 
 
 {% block body %}
-  <div class="login">
-    {% if form.non_field_errors %}
-      {% for error in form.non_field_errors %}
-        <div class="alert alert-danger alert-dismissable">
-          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-          {{ error }}
+    <div class="container">
+        <div class="row">
+            <br><br>
+            <div class="col s1 m3 l3"></div>
+            <div class="col s10 m6 l6 card hoverable">
+
+                {% if form.non_field_errors %}
+                <br><br>
+                {% for error in form.non_field_errors %}
+                <div class="alert alert-danger alert-dismissable">
+                  <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                  {{ error }}
+              {% endfor %}
+                    <br><br>
+            {% endif %}
+
+              <h3 class="center" style="color: #26a69a">{% trans 'Log in' %}</h3>
+              <form method="post" action="{% url 'login' %}" role="form">
+                {% csrf_token %}
+                <div class="input-field{% if form.username.errors %} has-error{% endif %}">
+                  <label for="username" class="active">{% trans 'Username' %}</label>
+                  <input type="text" class="form-control" id="username" name="username">
+
+                  {% for error in form.username.errors %}
+                    <span class="red-text">{{ error }}</span><br>
+                  {% endfor %}
+                </div>
+                <div class="input-field{% if form.password.errors %} has-error{% endif %}">
+                  <label for="password" class="active">{% trans 'Password' %}</label>
+                  <input type="password" class="form-control" id="password" name="password">
+                  {% for error in form.password.errors %}
+                    <span class="red-text">{{ error }}</span><br>
+                  {% endfor %}
+                </div>
+                        <button type="submit" class="btn waves-effect waves-light">{% trans 'Log in' %}</button>
+                  <br><br><br>
+              </form>
+          </div>
+
+            </div>
+            <div class="col s1 m3 l3"></div>
+
         </div>
-      {% endfor %}
-    {% endif %}
-    <div class="login">
-      <h2>{% trans 'Log in' %}</h2>
-      <form method="post" action="{% url 'login' %}" role="form">
-        {% csrf_token %}
-        <div class="form-group{% if form.username.errors %} has-error{% endif %}">
-          <label for="username">{% trans 'Username' %}</label>
-          <input type="text" class="form-control" id="username" name="username">
-          {% for error in form.username.errors %}
-            <label class="control-label">{{ error }}</label>
-          {% endfor %}
-        </div>
-        <div class="form-group{% if form.password.errors %} has-error{% endif %}">
-          <label for="password">{% trans 'Password' %}</label>
-          <input type="password" class="form-control" id="password" name="password">
-          {% for error in form.password.errors %}
-            <label class="control-label">{{ error }}</label>
-          {% endfor %}
-        </div>
-        <div class="form-group">
-          <button type="submit" class="btn btn-default">{% trans 'Log in' %}</button>
-        </div>
-      </form>
     </div>
-  </div>
+
 {% endblock body %}
