--- a/linkbook/templates/base.html
+++ b/linkbook/templates/base.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"> <! This will help in zooming in mobile>
 	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<!--Import materialize.css-->
-	<link type="text/css" rel="stylesheet" href="../static/materialize/css/materialize.css"  media="screen,projection"/>
+	<link type="text/css" rel="stylesheet" href="../../static/materialize/css/materialize.css"  media="screen,projection"/>
 	<title>
 		{% block title %}{% endblock %}
 	</title>
-    <script src = "../static/materialize/js/jquery.js"></script>
-    <script src = '../static/materialize/js/materialize.js'> </script>
+    <script src = "../../static/materialize/js/jquery.js"></script>
+    <script src = '../../static/materialize/js/materialize.js'> </script>
 	{% block head %}
 	{% endblock %}
 </head>
