--- a/linkbook/authentication/templates/authentication/login.html
+++ b/linkbook/authentication/templates/authentication/login.html
@@ -22,7 +22,7 @@
                     <br><br>
             {% endif %}
 
-              <h3 class="center" style="color: #26a69a">{% trans 'Log in' %}</h3>
+              <h3 class="center">{% trans 'Log in' %}</h3>
               <form method="post" action="{% url 'login' %}" role="form">
                 {% csrf_token %}
                 <div class="input-field{% if form.username.errors %} has-error{% endif %}">
@@ -35,7 +35,7 @@
                 </div>
                 <div class="input-field{% if form.password.errors %} has-error{% endif %}">
                   <label for="password" class="active">{% trans 'Password' %}</label>
-                  <input type="password" class="form-control" id="password" name="password">
+                  <input type="password"  id="password" name="password">
                   {% for error in form.password.errors %}
                     <span class="red-text">{{ error }}</span><br>
                   {% endfor %}
