--- a/linkbook/core/templates/core/index.html
+++ b/linkbook/core/templates/core/index.html
@@ -6,11 +6,11 @@
 
 {% block body %}
 {% if request.user.is_authenticated %}
-<a href = "/logout"> Logout</a><br/>
+<a href = "/logout"> Logout</a>
+    <br><a href = "/link/new"> Create new link </a><br/>
+<a href = "/book/new"> Create new book </a><br/>
 {% else %}
 <a href = "/login"> Login</a><br/>
 <a href = "/signup"> Signup</a><br/>
 {% endif %}
-<a href = "/link/new"> Create new link </a><br/>
-<a href = "/book/new"> Create new book </a><br/>
 {% endblock body %}
