--- a/linkbook/links/templates/links/new_book.html
+++ b/linkbook/links/templates/links/new_book.html
@@ -10,7 +10,7 @@
 
             <div class="col s1 l3 m3"></div>
             <div class="col s10 l6 m6 card hoverable">
-            <h4 class="center">Fill this form to create your book</h4>
+            <h4 class="center">Create your own book</h4>
                 <form method="post" action="{% url 'create_book' %}" role="form">
                 {% csrf_token %}
                     {% for field in form.visible_fields %}
