--- a/linkbook/links/templates/links/new_link.html
+++ b/linkbook/links/templates/links/new_link.html
@@ -12,13 +12,13 @@
 
             <div class="col s1 m3 l3"></div>
             <div class="col s10 m6 l6 card hoverable">
-            <h4 class="center">Fill this form to post your link</h4>
+            <h4 class="center">Create your link<h4>
                 <form method="post" action="{% url 'create_link' %}" role="form">
                 {% csrf_token %}
                     {% for field in form.visible_fields %}
                     <div class=" input-field">
                         {{ field }}
-                        <label for="{{ field.label }}" class="active" >{{ field.label }} </label>
+                        <label  >{{ field.label }} </label>
                         {% if field.help_text %}
                             <span>{{ field.help_text|safe }}</span>
                         {% endif %}
