--- a/linkbook/templates/base.html
+++ b/linkbook/templates/base.html
@@ -8,12 +8,14 @@
 	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<!--Import materialize.css-->
 	<link type="text/css" rel="stylesheet" href="../../static/materialize/css/materialize.css"  media="screen,projection"/>
+
 	<title>
 		{% block title %}{% endblock %}
 	</title>
     <script src = "../../static/materialize/js/jquery.js"></script>
     <script src = '../../static/materialize/js/materialize.js'> </script>
-	{% block head %}
+	<!--- <link type="text/css" rel="stylesheet" href="../../static/materialize/css/Color_theme.css" media="screen,projection"> --->
+    {% block head %}
 	{% endblock %}
 </head>
 <style>
@@ -43,11 +45,12 @@
             </ul>
             <ul class="hide-on-med-and-down right">
                 {% if not request.user.is_authenticated %}
-                <li><a href="/signup" class="right"> Sign Up</a></li>
-                <li><a href="/login" class="right"> Login</a></li>
+                <li ><a href="/login" class="right"> Login</a></li>
+                    <li ><a href="/signup" class="right">Sign Up</a></li>
+
                 {% else %}
-                <li><a href="/profile" class="right">Profile</a></li>
-                <li><a href="/logout" class="right">Logout</a></li>
+                    <li><a href="/profile" class="right">Profile</a></li>
+                    <li><a href="/logout" class="right">Logout</a></li>
                 {% endif %}
 
             </ul>
@@ -74,6 +77,7 @@
         $(function () {
             $(".button-collapse").sideNav();
         });
+        $('select').material_select();
     </script>
 </body>
 </html>
