--- a/linkbook/templates/base.html
+++ b/linkbook/templates/base.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"> <! This will help in zooming in mobile>
+    <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- This will help in zooming in mobile-->
 	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<!--Import materialize.css-->
 	<link type="text/css" rel="stylesheet" href="../../static/materialize/css/materialize.css"  media="screen,projection"/>
