--- a/linkbook/links/templates/links/edit_link.html
+++ b/linkbook/links/templates/links/edit_link.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% load i18n %}
 
-{% block title %}New Link{% endblock %}
+{% block title %}Edit {{link}}{% endblock %}
 
 {% block body %}
 
@@ -12,8 +12,8 @@
 
             <div class="col s1 m3 l3"></div>
             <div class="col s10 m6 l6 card hoverable">
-            <h4 class="center">Create your link<h4>
-                <form method="post" action="{% url 'create_link' %}" role="form">
+            <h4 class="center">Edit your link<h4>
+                <form method="post" action="/link/{{link.id}}/edit/" role="form">
                 {% csrf_token %}
                     {% for field in form.visible_fields %}
                     <div class=" input-field">
@@ -40,7 +40,6 @@
 
     $(function () {
 
-          $('#description').val('');
          $('#description').trigger('autoresize');
 
 
