Improvements and impoved mobile responsiveness

--- a/linkbook/links/templates/links/new_book.html
+++ b/linkbook/links/templates/links/new_book.html
@@ -40,12 +40,9 @@
 
     $(function () {
 
-          $('#description').val('');
+    //      $('#description').val('');
          $('#description').trigger('autoresize');
-
-
     })
-
     </script>
 
 {% endblock body %}
