--- a/linkbook/templates/base.html
+++ b/linkbook/templates/base.html
@@ -14,7 +14,7 @@
 	</title>
     <script src = "/static/materialize/js/jquery.js"></script>
     <script src = '/static/materialize/js/materialize.js'> </script>
-	<!--<link type="text/css" rel="stylesheet" href="/static/materialize/css/Color_theme.css" media="screen,projection">-->
+	<!---<link type="text/css" rel="stylesheet" href="/static/materialize/css/Color_theme.css" media="screen,projection"> --->
     {% block head %}
 	{% endblock %}
 </head>
@@ -32,9 +32,9 @@
 
 </style>
 <body>
-    <nav class=" white-text" style="background-color : #26a69a">
+    <nav class=" white-text" style="background-color: #26a69a">
         <div class="nav-wrapper">
-            <a href="#" class="center brand-logo">LINK BOOK</a>
+            <a href="#" class="center brand-logo" >LINK BOOK</a>
             <a href="#" data-activates="mobile-demo"  class="button-collapse" ><i class="material-icons">menu</i></a>
             <ul class="hide-on-med-and-down left">
                 <li class="active left"><a href="/">Home</a></li>
