--- a/linkbook/links/templates/links/new_link.html
+++ b/linkbook/links/templates/links/new_link.html
@@ -12,7 +12,7 @@
 
             <div class="col s1 m3 l3"></div>
             <div class="col s10 m6 l6 card hoverable">
-            <h4 class="center">Create your link<h4>
+            <h4 class="center">Create your link</h4>
                 <form method="post" action="{% url 'create_link' %}" role="form">
                 {% csrf_token %}
                     {% for field in form.visible_fields %}
@@ -31,7 +31,7 @@
                     <br><br>
                 </form>
             </div>
-            <div class="s1 m3 l3"></div>
+            <div class="col s1 m3 l3"></div>
 
         </div>
     </div>
@@ -40,9 +40,8 @@
 
     $(function () {
 
-          $('#description').val('');
          $('#description').trigger('autoresize');
-
+         $('.chips').material_chip();
 
     })
 
