--- a/linkbook/links/templates/links/link.html
+++ b/linkbook/links/templates/links/link.html
@@ -6,35 +6,71 @@
 
 {% block body %}
 
-<div>
-<a href = "{{link.url}}">{{link | linebreaksbr}}</a>
-<p>{{link.description}}</p>
 
-Tags:
-{% for tag in link.tags.all %}
-<strong>{{tag.name}}</strong>
-{% endfor %}
-</div>
+    <div class="container">
+        <div class="row">
+
+            <div class="col s1 m3 l3"></div>
+            <div class="col s10 m6 l6">
+                <ul class="collection hoverable " style="border: 1px solid lightcoral">
+                    <li class="collection-item avatar">
+                      <i class="material-icons circle red">web</i>
+                        <span class="title">URL</span>
+                        <p><a href = "{{link.url}}" target="_blank">{{link | linebreaksbr}}</a></p>
+                    </li>
+                    <li class="collection-item avatar">
+                      <i class="material-icons circle red">description</i>
+                        <span class="title">Description</span>
+                       <p>{{link.description}}</p>
+                    </li>
+                    <li class="collection-item avatar">
+                      <i class="material-icons circle red">assignment</i>
+                        <span class="title">Tags</span>
+                        <p>
+                        {% for tag in link.tags.all %}
+                            <div class="chip">
+                                {{tag.name}}
+                            </div>
+                         {% endfor %}
+                        </p>
+                    </li>
+                    <li class="collection-item avatar">
+                      <i class="material-icons circle red">comment</i>
+                        <span class="title">Comments</span>
+                        <p>{{link.comment_set.count}} comment(s) on this link:</p>
+                        <p>
+
+                    {% for comment in link.comment_set.all %}
+                        <div>
+                            <strong>{{ comment.user }} [{{comment.date}}]:</strong>
+                            <p>{{ comment.text|linebreaks }}</p>
+                        </div>
+                    {% endfor %}
+                        </p>
+                    </li>
+
+                <li class="collection-item avatar">
+                      <i class="material-icons circle red">mode_comment</i>
+                        <span class="title">Write a comment</span>
+                        <p>
+                        <div>
+                    <form method="post" action="/link/{{link.id}}/comment/" role="form">
+                        {% csrf_token %}
+                        <div class="input-field">
+                        {{ comment_form.as_p }}
+
+                        <button type="submit" class="save btn red waves-effect waves-light">Comment</button>
+                    </form>
+                    </div>
+                        </p>
+                    </li>
+                </ul>
 
 
-<div>
-<p>{{link.comment_set.count}} comment(s) on this link:</p>
-{% for comment in link.comment_set.all %}
-	<div>
-        <strong>{{ comment.user }} [{{comment.date}}]:</strong>
-        <p>{{ comment.text|linebreaks }}</p>
+            </div>
+            <div class="col s1 m3 l3"></div>
+        </div>
     </div>
-{% endfor %}
-</div>
 
 
-
-<div>
-<strong>Write a comment</strong>
-<form method="post" action="/link/{{link.id}}/comment/" role="form">
-	{% csrf_token %}
-    {{ comment_form.as_p }}
-    <button type="submit" class="save btn btn-default">Comment</button>
-</form>
-</div>
 {% endblock %}
