--- a/linkbook/links/templates/links/link.html
+++ b/linkbook/links/templates/links/link.html
@@ -15,17 +15,18 @@
                 <ul class="collection hoverable " style="border: 1px solid lightcoral">
                     <li class="collection-item avatar">
                       <i class="material-icons circle red">web</i>
-                        <span class="title">URL</span>
-                        <p><a href = "{{link.url}}" target="_blank">{{link | linebreaksbr}}</a></p>
+                        <span class="title red-text">URL</span>
+                        <p><a href = "{{link.url}}" target="_blank">{{link | linebreaksbr}} </a>  <button class="btn btn-flat red right waves-effect waves-light white-text" id="btn_url">Show url</button> </p>
+                        <p id="url" style="display: none">{{ link.url }}</p>
                     </li>
                     <li class="collection-item avatar">
                       <i class="material-icons circle red">description</i>
-                        <span class="title">Description</span>
+                        <span class="title red-text">Description</span>
                        <p>{{link.description}}</p>
                     </li>
                     <li class="collection-item avatar">
                       <i class="material-icons circle red">assignment</i>
-                        <span class="title">Tags</span>
+                        <span class="title red-text">Tags</span>
                         <p>
                         {% for tag in link.tags.all %}
                             <div class="chip">
@@ -36,14 +37,14 @@
                     </li>
                     <li class="collection-item avatar">
                       <i class="material-icons circle red">comment</i>
-                        <span class="title">Comments</span>
-                        <p>{{link.comment_set.count}} comment(s) on this link:</p>
+                        <span class="title red-text">Comments</span>
+                        <p class="green-text">{{link.comment_set.count}} comment(s) on this link:</p>
                         <p>
 
                     {% for comment in link.comment_set.all %}
                         <div>
-                            <strong>{{ comment.user }} [{{comment.date}}]:</strong>
-                            <p>{{ comment.text|linebreaks }}</p>
+                            <span style="font-weight: 800">{{ comment.user }} <sub>[{{comment.date}}]</sub> :</span>
+                            <span>{{ comment.text }}</span>
                         </div>
                     {% endfor %}
                         </p>
@@ -51,14 +52,13 @@
 
                 <li class="collection-item avatar">
                       <i class="material-icons circle red">mode_comment</i>
-                        <span class="title">Write a comment</span>
+                        <span class="title red-text">Write a comment</span>
                         <p>
                         <div>
                     <form method="post" action="/link/{{link.id}}/comment/" role="form">
                         {% csrf_token %}
                         <div class="input-field">
                         {{ comment_form.as_p }}
-
                         <button type="submit" class="save btn red waves-effect waves-light">Comment</button>
                     </form>
                     </div>
@@ -71,6 +71,33 @@
             <div class="col s1 m3 l3"></div>
         </div>
     </div>
+
+    <script>
+
+    $(function () {
+
+        var b = $('#btn_url');
+        var disp = false;
+        var URL = $('#url');
+        b.click(function () {
+
+            if(disp)
+            {
+                URL.css({'display' : 'none'});
+                b.html("Show URL");
+            }
+            else
+            {
+                URL.css({'display' : 'block'});
+                b.html("Hide URL");
+            }
+            disp = 1 - disp;
+        });
+
+    })
+
+
+    </script>
 
 
 {% endblock %}
