--- a/linkbook/links/templates/links/link.html
+++ b/linkbook/links/templates/links/link.html
@@ -9,7 +9,6 @@
 
     <div class="container">
         <div class="row">
-
             <div class="col s1 m3 l3"></div>
             <div class="col s10 m6 l6">
                 <ul class="collection hoverable " style="border: 1px solid #607d8b">
@@ -76,7 +75,7 @@
                         {% csrf_token %}
                         <div class="input-field">
                         {{ comment_form.as_p }}
-                        <button type="submit" class="save btn blue waves-effect waves-light">Comment</button>
+                        <button type="submit" class="btn blue waves-effect waves-light">Comment</button>
                             </div>
                     </form>
                 </li>
@@ -117,8 +116,19 @@
     $.get('/link/{{link.id}}/vote/', {type: 'U'}, function(data){
                $('#upvotes_count').html(data['upvotes']);
                $('#downvotes_count').html(data['downvotes']);
-                $(".upvote").toggleClass(data['upvote_button']);
-               $(".downvote").toggleClass(data['downvote_button']);
+               $('.upvote').removeClass('btn-flat lighten-5');
+               $('.downvote').removeClass('btn-flat lighten-5');
+               //$(".downvote").toggleClass(data['downvote_button']);
+                console.log(data.upvote_button);
+                console.log(data.downvote_button);
+                if(data['upvote_button'] == '')
+                {
+
+                }
+                else
+                {
+                    $('.upvote').addClass('btn-flat lighten-5');
+                }
         });
     });
     $('.downvote').click(function(){
@@ -128,8 +138,18 @@
 
                $('#downvotes_count').html(data['downvotes']);
                $('#upvotes_count').html(data['upvotes']);
-               $(".upvote").toggleClass(data['upvote_button']);
-               $(".downvote").toggleClass(data['downvote_button']);
+               $('.upvote').removeClass('btn-flat lighten-5');
+               $('.downvote').removeClass('btn-flat lighten-5');
+              // $(".downvote").addClass(data['downvote_button']);
+
+                if(data['downvote_button'] == '')
+                {
+
+                }
+                else
+                {
+                    $('.downvote').addClass('btn-flat lighten-5');
+                }
         });
     });
 
